--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.3",
+    "@next-auth/mongodb-adapter": "^1.1.1",
     "@next/font": "13.1.1",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
+    "mongodb": "^4.13.0",
     "next": "13.1.1",
+    "next-auth": "^4.18.8",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
